app/assets/css/main.css
@import "tailwindcss";
@import "@nuxt/ui";
@import "tw-animate-css";
@import "./keyframes.css";
@import "./utilities.css";

@plugin "@tailwindcss/typography";
@plugin "daisyui";

@plugin "daisyui/theme" {
	name: "light";
	default: true;
	prefersdark: false;
	color-scheme: "light";
	--color-base-100: oklch(100% 0 0);
	--color-base-200: oklch(90% 0 0);
	--color-base-300: oklch(85% 0 0);
	--color-base-content: oklch(0% 0 0);
	--color-primary: oklch(58% 0.233 277.117);
	--color-primary-content: oklch(100% 0 0);
	--color-secondary: oklch(0.5873 0.0204 272.13);
	--color-secondary-content: oklch(100% 0 0);
	--color-accent: oklch(60% 0.152 181.912);
	--color-accent-content: oklch(100% 0 0);
	--color-neutral: oklch(14% 0.005 285.823);
	--color-neutral-content: oklch(100% 0 0);
	--color-info: oklch(55% 0.16 232.661);
	--color-info-content: oklch(89.04% 0.062 264.052);
	--color-success: oklch(76% 0.177 163.223);
	--color-success-content: oklch(37% 0.077 168.94);
	--color-warning: oklch(82% 0.189 84.429);
	--color-warning-content: oklch(41% 0.112 45.904);
	--color-error: oklch(71% 0.194 13.428);
	--color-error-content: oklch(28% 0.109 3.907);
	--radius-selector: 0.5rem;
	--radius-field: 0.5rem;
	--radius-box: 0.5rem;
	--size-selector: 0.25rem;
	--size-field: 0.21875rem;
	--border: 1.5px;
	--depth: 0;
	--noise: 0;
}

@plugin "daisyui/theme" {
	name: "dark";
	default: true;
	prefersdark: true;
	color-scheme: "dark";
	--color-base-100: oklch(25% 0.016 252);
	--color-base-200: oklch(23% 0.014 253);
	--color-base-300: oklch(20% 0.012 254);
	--color-base-content: oklch(90% 0 0);
	--color-primary: oklch(58% 0.233 277.117);
	--color-primary-content: oklch(100% 0 0);
	--color-secondary: oklch(0.5873 0.0204 272.13);
	--color-secondary-content: oklch(100% 0 0);
	--color-accent: oklch(60% 0.152 181.912);
	--color-accent-content: oklch(100% 0 0);
	--color-neutral: oklch(14% 0.005 285.823);
	--color-neutral-content: oklch(100% 0 0);
	--color-info: oklch(55% 0.16 232.661);
	--color-info-content: oklch(89.04% 0.062 264.052);
	--color-success: oklch(76% 0.177 163.223);
	--color-success-content: oklch(37% 0.077 168.94);
	--color-warning: oklch(82% 0.189 84.429);
	--color-warning-content: oklch(41% 0.112 45.904);
	--color-error: oklch(71% 0.194 13.428);
	--color-error-content: oklch(28% 0.109 3.907);
	--radius-selector: 0.5rem;
	--radius-field: 0.5rem;
	--radius-box: 0.5rem;
	--size-selector: 0.25rem;
	--size-field: 0.21875rem;
	--border: 1.5px;
	--depth: 0;
	--noise: 0;
}

@plugin "daisyui/theme" {
	name: "midnight";
	default: false;
	prefersdark: false;
	color-scheme: "dark";
	--color-base-100: oklch(0% 0 0);
	--color-base-200: oklch(10% 0 0);
	--color-base-300: oklch(27% 0 0);
	--color-base-content: oklch(87.609% 0 0);
	--color-primary: oklch(58% 0.233 277.117);
	--color-primary-content: oklch(100% 0 0);
	--color-secondary: oklch(0.5873 0.0204 272.13);
	--color-secondary-content: oklch(100% 0 0);
	--color-accent: oklch(60% 0.152 181.912);
	--color-accent-content: oklch(100% 0 0);
	--color-neutral: oklch(14% 0.005 285.823);
	--color-neutral-content: oklch(100% 0 0);
	--color-info: oklch(55% 0.16 232.661);
	--color-info-content: oklch(89.04% 0.062 264.052);
	--color-success: oklch(76% 0.177 163.223);
	--color-success-content: oklch(37% 0.077 168.94);
	--color-warning: oklch(82% 0.189 84.429);
	--color-warning-content: oklch(41% 0.112 45.904);
	--color-error: oklch(71% 0.194 13.428);
	--color-error-content: oklch(28% 0.109 3.907);
	--radius-selector: 0.5rem;
	--radius-field: 0.5rem;
	--radius-box: 0.5rem;
	--size-selector: 0.25rem;
	--size-field: 0.21875rem;
	--border: 1.5px;
	--depth: 0;
	--noise: 0;
}

@layer base {
	:root {
		--animate-accordion-down: accordion-down 0.2s ease-out;
		--animate-accordion-up: accordion-up 0.2s ease-out;
		--branding-wolfstar: oklch(63% 0.2502 28.13);
		--branding-staryl: oklch(0.5873 0.0204 272.13);
	}

	[data-theme="light"] {
		--ui-text-dimmed: var(--color-neutral-600);
		--ui-text-muted: var(--color-neutral-800);
		--ui-text-toned: var(--color-neutral-900);
		--ui-text: black;
		--ui-text-highlighted: black;
		--ui-text-inverted: var(--color-white);

		--ui-bg: var(--color-base-300);
		--ui-bg-muted: var(--color-neutral-50);
		--ui-bg-elevated: var(--color-neutral-100);
		--ui-bg-accented: var(--color-neutral-200);
		--ui-bg-inverted: var(--color-neutral-900);

		--ui-border: var(--color-base-100);
		--ui-border-muted: var(--color-base-200);
		--ui-border-accented: var(--color-base-200);
		--ui-border-inverted: var(--color-neutral-900);

		--ui-radius: var(--radius-box);
		--ui-container: var(--container-7xl);
	}

	[data-theme="dark"] {
		--ui-text-dimmed: var(--color-neutral-500);
		--ui-text-muted: var(--color-neutral-400);
		--ui-text-toned: var(--color-neutral-300);
		--ui-text: var(--color-neutral-200);
		--ui-text-highlighted: var(--color-white);
		--ui-text-inverted: var(--color-neutral-900);

		--ui-bg: var(--color-base-300);
		--ui-bg-muted: var(--color-neutral-800);
		--ui-bg-elevated: var(--color-neutral-800);
		--ui-bg-accented: var(--color-neutral-700);
		--ui-bg-inverted: var(--color-white);

		--ui-border: var(--color-base-100);
		--ui-border-muted: var(--color-base-200);
		--ui-border-accented: var(--color-base-200);
		--ui-border-inverted: var(--color-white);

		--ui-radius: var(--radius-box);
		--ui-container: var(--container-7xl);
	}

	::-webkit-scrollbar {
		width: 5px;
		height: 2px;
	}

	::-webkit-scrollbar-thumb {
		border-radius: 5px;
		background: var(--color-base-content);
	}

	.no-scrollbar::-webkit-scrollbar {
		display: none;
	}

	.no-scrollbar {
		scrollbar-width: none;
		-ms-overflow-style: none;
	}
}

@theme inline {
	--color-branding-wolfstar: oklch(var(--branding-wolfstar) / <alpha-value>);
	--color-branding-staryl: oklch(var(--branding-staryl) / <alpha-value>);
}

@theme {
	--color-branding-wolfstar: var(--branding-wolfstar);
	--color-branding-staryl: var(--branding-staryl);
}

@layer base {
	input::placeholder,
	textarea::placeholder {
		color: var(--color-gray-400);
	}
}

@layer base {
	*,
	::after,
	::before,
	::backdrop,
	::file-selector-button {
		border-color: var(--color-gray-200, currentColor);
	}
}

